# Graphed_News

./: README.md
.github/workflows/: deploy-web.yml
graphed_news/: .gitignore  MVP.py  README.md  __init__.py  main.py  news_summary_client.py  news_summary_server.py  post_reports.py  pyproject.toml  utils.py
graphed_news/backend/: main.py
graphed_news/config/: model_config.yaml
graphed_news/core/: news_accumulator.py  news_crawler.py  news_ka_agent.py  news_processor.py  news_qa_agent.py  news_qa_generator.py  news_question_generator.py  utils.py
graphed_news/database/: db_query_example.py  example_db.py
graphed_news/extract_contents/: crawl_news.py  extract_essence.py  rag_agent.py
graphed_news/grpc/: .gitignore  grpc_test.py
graphed_news/lagacy/: README.md  main.py  news_accumulator.py  news_qa_agent.py
graphed_news/lagacy/backend/: main.py
graphed_news/lagacy/backend/database/: example_data_generator.py
graphed_news/lagacy/extract_contents/: rag_agent.py  retrieve_relative.py
graphed_news/notebooks/: arch.ipynb  experiments.ipynb  functions.ipynb
graphed_news/prompts/: news_accumulator_prompt.yaml  news_ka_agent_prompt.yaml  news_processor_prompt.yaml  news_qa_agent_prompt.yaml  news_question_generator_prompt.yaml
protos/: NewsSummary.proto
web/: .env.example  README.md  package.json  pnpm-lock.yaml  wrangler.jsonc
web/app/: entry.server.tsx  root.tsx  tailwind.css
web/migrations/: 0001_create-test-db.sql  0002_create_news-tables.sql  0003_news-summary-rename.sql  0004_create-test-solve-table.sql  0005_update-news-keyword.sql  (+3 more)
(+21 files in other folders)
