[project]
name = "graphed-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "crawl4ai>=0.6.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.59",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "playwright>=1.52.0",
]
